Implemented process to create data from a latent gmm in terms of N, d, and k.

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -36,3 +36,31 @@
   publisher={Wiley Online Library}
 }
 
+@article{kinderman1977computer,
+  title={Computer generation of random variables using the ratio of uniform deviates},
+  author={Kinderman, Albert J and Monahan, John F},
+  journal={ACM Transactions on Mathematical Software (TOMS)},
+  volume={3},
+  number={3},
+  pages={257--260},
+  year={1977},
+  publisher={ACM}
+}
+
+@article{odell1966numerical,
+  title={A numerical procedure to generate a sample covariance matrix},
+  author={Odell, PL and Feiveson, AH},
+  journal={Journal of the American Statistical Association},
+  volume={61},
+  number={313},
+  pages={199--203},
+  year={1966},
+  publisher={Taylor \& Francis Group}
+}
+
+@article{sawyer2007wishart,
+  title={Wishart Distributions and Inverse-Wishart Sampling},
+  author={Sawyer, S},
+  journal={URL: www. math. wustl. edu/sawyer/hmhandouts/Whishart. pdf},
+  year={2007}
+}
