--- a/doc/document.tex
+++ b/doc/document.tex
@@ -120,6 +120,9 @@ The algorithm continues back and forth between expectation and maximization stag
 
 \section{Evaluation}
 
+To sample from a standard univariate normal distribution one can use The Box-Muller transform, Zigguart method, or Ratio-of-uniforms method \cite{kinderman1977computer}. The latter is used here due to its simplicity and efficiency. Sampling from the multivariate normal distribution can by done by sampling a standard normal vector $\eta \sim \mathcal{N}(0 ,I_d)$ and computing $\mu + \Sigma^{1/2} \eta$ where $\Sigma^{1/2}$ can be computed by Eigendecomposition, $\Sigma^{1/2} = Q \Delta^{1/2} Q^{-}$, or Cholesky facotrization, $\Sigma = L L^T, \Sigma^{1/2} = L$. The latter is used since it is more efficient. The matter of mixture coefficients is resolved by taking the designated number of points proportional to the sampled values of $K$ $u_i \sim \mathcal{U}(0, 1)$. There are numerous ways of specifying the means, here a scaled standard normal vector is used. The more exciting and interesting prospect is how to sample the covariance matrix. This is where the Wishart distribution, $\Sigma \sim W(I_d, d, n)$ for $n > d - 1$, comes in handy. The Wishart distribution is a model of what the sample covariance matrix should look like given a series of $n$ $x_i \sim \mathcal{N}(0, V)$ vectors. Based on a $\boundedBy{d^2}$ method by \cite{odell1966numerical}, \cite{sawyer2007wishart} gives an equally efficient method for sampling $\Sigma^{1/2} = L$ by letting $L_{i,i} \sim \chi^2(n - i + 1)$ and $L_{i,j} \sim \mathcal{N}(0, 1)$. Thus, the generative process is to pick a component with probability $\pi_i$, sample $\mu_k \sim \mathcal{N}(0, I_d)$ and $\Sigma \sim W(I_d, d, n_k)$, then sample $n_k$ points from $\mathcal{N}(\mu_k, \Sigma_k)$.
+
+
 Three graphs represent sequential, parallel, and gpu:
 
 \begin{enumerate}
