Added draft watermark document to emphasize that it is a work in progress.

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -13,6 +13,9 @@
 \usepackage [english]{babel}
 \usepackage [autostyle, english = american]{csquotes}
 \MakeOuterQuote{"}
+\usepackage{draftwatermark}
+\SetWatermarkText{\textsc{Draft}}
+\SetWatermarkScale{6}
 
 \newgeometry{margin=1.25in}
 
