--- a/doc/references.bib
+++ b/doc/references.bib
@@ -64,3 +64,30 @@
   journal={URL: www. math. wustl. edu/sawyer/hmhandouts/Whishart. pdf},
   year={2007}
 }
+
+@article{collange2015numerical,
+  title={Numerical reproducibility for the parallel reduction on multi-and many-core architectures},
+  author={Collange, Sylvain and Defour, David and Graillat, Stef and Iakymchuk, Roman},
+  journal={Parallel Computing},
+  volume={49},
+  pages={83--97},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{whitehead2011precision,
+  title={Precision \& performance: Floating point and IEEE 754 compliance for NVIDIA GPUs},
+  author={Whitehead, Nathan and Fit-Florea, Alex},
+  journal={rn (A+ B)},
+  volume={21},
+  number={1},
+  pages={18749--19424},
+  year={2011}
+}
+
+@article{harris2007optimizing,
+  title={Optimizing cuda},
+  author={Harris, Mark},
+  journal={SC07: High Performance Computing With CUDA},
+  year={2007}
+}
